--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -3,14 +3,7 @@
     - name: Executar script de coleta de informações do WebLogic
       shell: |
         #!/bin/bash
-        domain_home=$(cat ps.txt |grep nodemanager | grep -o "Dweblogic.RootDirectory=.*" | cut -d "=" -f 2 | sed 's/ -.*//g' | grep /)
-        config_xml=$(cat "$domain_home"/config/config.xml)
-        jdbc_xml=$(cat "$domain_home"/config/jdbc/*jdbc*.xml)
-        domain_version=$(echo "$config_xml" | grep -oE '<domain-version>[^<]+</domain-version>' | sed -E 's/<\/?domain-version>//g')
-        machines=$(echo "$config_xml" | grep -o '<machine>[^<]*</machine>' | sed -E 's/<machine>([^<]+)<\/machine>/    - \1/' | awk '!seen[$0]++' | grep -vE '^    -  $')
-        datasources=$(echo "$jdbc_xml" | grep -o '<url>[^<]*</url>' | grep jdbc | sed -E 's/<url>([^<]+)<\/url>/    - \1/' | awk '!seen[$0]++' | grep -vE '^    -  $')
-        output="- host: $(hostname)\n  domain-version: $domain_version\n  machines:\n$machines\n  datasources:\n$datasources"
-        echo "$output"
+        hostname
       register: script_output
 
     - name: Concatenar saídas do script de coleta
