--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -28,6 +28,8 @@
       set_fact:
         all_output: "{{ all_output|default([]) + script_output.stdout_lines }}"
 
-    - name: Exibir saída do script de coleta de informações do WebLogic
-      debug:
-        var: all_output
+- name: Exibir saída do script de coleta de informações do WebLogic
+  debug:
+    var: script_output.stdout_lines
+    verbosity: 2
+
