--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -1,13 +1,4 @@
----
 - hosts: localhost
-  gather_facts: false
-  tasks:
-    - name: Adding localhost
-      add_host:
-        hostname: "{{ item }}"
-        groups: weblogic
-      loop: "{{ guestname }}"
-- hosts: weblogic
   tasks:
     - name: Executar script de coleta de informações do WebLogic
       shell: |
@@ -24,8 +15,23 @@
         echo "$output"
       register: script_output
 
+    - name: Concatenar saídas do script de coleta
+      set_fact:
+        all_output: "{{ all_output|default([]) + script_output.stdout_lines }}"
+
     - name: Exibir saída do script de coleta de informações do WebLogic
       debug:
-        var: script_output.stdout_lines
-        verbosity: 2
-        msg: "Resultado do script:"
+        var: all_output
+
+    - name: Enviar e-mail com a saída da coleta de informações do WebLogic
+      mail:
+        host: "smtp.gmail.com"
+        port: "587"
+        username: "seu_email@gmail.com"
+        password: "sua_senha"
+        to:
+          - "destinatario1@example.com"
+          - "destinatario2@example.com"
+        subject: "Saída da coleta de informações do WebLogic"
+        body: "{{ all_output }}"
+      when: all_output is defined
