--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -7,16 +7,9 @@
         hostname: "{{ item }}"
         groups: weblogic
       loop: "{{ guestname }}"
-    - name: Define cabeçalho do CSV
-      shell: |
-        #!/bin/bash
-        header="host,domain-version,machines,datasources"
-        echo "$header"
-      register: script_output
-    - name: Concatenar saída do cabeçalho
-      set_fact:
-        all_output: "{{ all_output|default([]) + script_output.stdout_lines }}"
+
 - hosts: weblogic
+  gather_facts: false
   tasks:
     - name: Executar script de coleta de informações do WebLogic
       shell: |
@@ -33,14 +26,13 @@
         echo "$output"
       register: script_output
 
-    - name: Concatenar saídas do script de coleta
+    - name: Concatenar saídas do script de coleta de informações do WebLogic
       set_fact:
         all_output: "{{ all_output|default([]) + script_output.stdout_lines }}"
 
-    - name: Exibir saída do script de coleta de informações do WebLogic
-      debug:
-        var: all_output
-
+- hosts: localhost
+  gather_facts: false
+  tasks:
     - name: Enviar e-mail com a saída da coleta de informações do WebLogic
       mail:
         host: "smtp.gmail.com"
@@ -52,4 +44,15 @@
           - "destinatario2@example.com"
         subject: "Saída da coleta de informações do WebLogic"
         body: "{{ all_output }}"
+      async: 180
+      poll: 0
       when: all_output is defined
+
+    - name: Aguardar conclusão da execução em todos os hosts
+      async_status:
+        jid: "{{ item.ansible_job_id }}"
+      with_items: "{{ ansible_play_batch }}"
+      loop_control:
+        label: "{{ item }}"
+      register: job_result
+      when: all_output
