--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -26,38 +26,7 @@
       set_fact:
         all_output: "{{ all_output|default([]) + script_output.stdout_lines }}"
 
-    - name: Gravar saída em um arquivo CSV
-      copy:
-        dest: /tmp/weblogic-hosts.csv
-        content: |
-          {% for line in all_output %}
-          {{ line }}{% if not loop.last %},{% endif %}
-          {% endfor %}
-        mode: '0644'
-      delegate_to: localhost
-
-    - name: Substituir \n por quebra de linha no arquivo CSV
-      replace:
-        path: /tmp/weblogic-hosts.csv
-        regexp: '\\n'
-        replace: '\n'
-      delegate_to: localhost
-
-    - name: Enviar e-mail com anexo
-      mail:
-        host: smtp.gmail.com
-        port: 587
-        username: david.sf026@gmail.com
-        password: vcnswzuhkrcybacz
-        from: david.sf026@gmail.com
-        to: david.sf026@gmail.com
-        subject: Planilha Coleta de Dados Hosts WebLogic
-        body: Segue, em anexo, a planilha gerada.
-        attach: /tmp/weblogic-hosts.csv
-      delegate_to: localhost
-
-    - name: Remover arquivo CSV
-      file:
-        path: /tmp/weblogic-hosts.csv
-        state: absent
-      delegate_to: localhost
+- hosts: localhost
+  tasks:
+  - debug:
+      var: all_output
