--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -1,4 +1,3 @@
----
 - hosts: localhost
   gather_facts: false
   tasks:
@@ -7,6 +6,10 @@
         hostname: "{{ item }}"
         groups: weblogic
       loop: "{{ guestname }}"
+    - name: Set empty all_output variable
+      set_fact:
+        all_output: []
+
 - hosts: weblogic
   tasks:
     - name: Executar script de coleta de informações do WebLogic
@@ -24,9 +27,9 @@
 
     - name: Concatenar saídas do script de coleta
       set_fact:
-        all_output: "{{ all_output|default([]) + script_output.stdout_lines }}"
+        all_output: "{{ all_output + script_output.stdout_lines }}"
 
 - hosts: localhost
   tasks:
-  - debug:
-      var: all_output
+    - debug:
+        var: all_output
