--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -12,24 +12,19 @@
 
 - hosts: weblogic
   tasks:
-    - name: Executar script de coleta de informações do WebLogic
+    - name: Executar script de coleta de cat /etc/os/release
       shell: |
         #!/bin/bash
-        domain_home=$(cat /home/david/workdir/ssm/ps.txt |grep nodemanager | grep -o "Dweblogic.RootDirectory=.*" | cut -d "=" -f 2 | sed 's/ -.*//g' | grep /)
-        config_xml=$(cat "$domain_home"/config/config.xml)
-        jdbc_xml=$(cat "$domain_home"/config/jdbc/*jdbc*.xml)
-        domain_version=$(echo "$config_xml" | grep -oE '<domain-version>[^<]+</domain-version>' | sed -E 's/<\/?domain-version>//g')
-        machines=$(echo "$config_xml" | grep -o '<machine>[^<]*</machine>' | sed -E 's/<machine>([^<]+)<\/machine>/\1/' | awk '!seen[$0]++' | grep -vE '^ *$' | tr '\n' ',' | sed 's/,$//')
-        datasources=$(echo "$jdbc_xml" | grep -o '<url>[^<]*</url>' | grep jdbc | sed -E 's/<url>([^<]+)<\/url>/\1/' | awk '!seen[$0]++' | grep -vE '^ *$' | tr '\n' ',' | sed 's/,$//')
-        output="$(hostname),$domain_version,\"$machines\",\"$datasources\""
-        echo "$header$output"
+        cat /etc/os-release
       register: script_output
-
     - name: Concatenar saídas do script de coleta
       set_fact:
-        all_output: "{{ all_output + script_output.stdout_lines }}"
+        all_output: "{{ all_output|default([]) + script_output.stdout_lines }}"
+      global: true
 
 - hosts: localhost
   tasks:
-    - debug:
-        var: all_output
+  - name: Mostrar na tela o all_output
+    debug:
+      var: all_output
+
