--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -20,15 +20,11 @@
 
     - name: Concatenar saídas do script de coleta
       set_fact:
+        cacheable: true
         all_output: "{{ all_output|default([]) + script_output.stdout_lines }}"
-
-    - name: Mostrar na tela o all_output
-      debug:
-        var: all_output
 
 - hosts: localhost
   tasks:
-    - name: Mostrar na tela o all_output
-      debug:
-        var: all_output
-
+  - name: Mostrar na tela o all_output
+    debug:
+      var: all_output
