--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -19,6 +19,8 @@
       set_fact:
         cacheable: true
         all_output: "{{ all_output|default([]) + script_output.stdout_lines }}"
+    - debug:
+      var: all_output
 
 - hosts: localhost
   tasks:
