--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -1,33 +1,23 @@
-- hosts: localhost
-  gather_facts: false
+- name: Armazenar "Hello World" em um register e enviar o arquivo para outro host
+  hosts: GNCASNHL07923
   tasks:
-    - name: Adding localhost
-      add_host:
-        hostname: "{{ item }}"
-        groups: weblogic
-      loop: "{{ guestname }}"
-
-- hosts: weblogic
-  tasks:
-    - name: Executar script de coleta de cat /etc/os/release
-      shell: |
-        #!/bin/bash
-        cat /etc/os-release
-      register: script_output
-
-    - name: Concatenar saídas do script de coleta
-      set_fact:
-        cacheable: true
-        all_output: "{{ all_output|default([]) + script_output.stdout_lines }}"
-
-    - name: Mostrar na tela o all_output
+    - name: Escrever "Hello World" na saída padrão
       debug:
-        var: all_output
+        msg: "Hello World"
+      register: hello_register
 
-- hosts: localhost
-  vars:
-    - output: "{{ all_output }}"
-  tasks:
-    - name: Mostrar na tela o all_output
+    - name: Exibir o conteúdo do register
       debug:
-        var: output
+        var: hello_register
+
+    - name: Armazenar o conteúdo do register em um arquivo
+      copy:
+        content: "{{ hello_register.stdout }}"
+        dest: "/tmp/hello.txt"
+
+    - name: Enviar o arquivo para outro host
+      copy:
+        src: "/tmp/hello.txt"
+        dest: "/tmp/hello.txt"
+        remote_src: yes
+      delegate_to: localhost
