--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -8,7 +8,7 @@
       loop: "{{ guestname }}"
 
 - name: Analisar arquivo /etc/os-release
-  hosts: machines
+  hosts: weblogic
   tasks:
     - name: Obter conteúdo do arquivo /etc/os-release
       shell: cat /etc/os-release
