--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -32,7 +32,7 @@
         host: smtp.gmail.com
         port: 587
         username: david.sf026@gmail.com
-        password: {{ smtppwd }}
+        password: "{{ smtppwd }}"
         from: david.sf026@gmail.com
         to: david.sf026@gmail.com
         subject: Relatório de hostname
