--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -17,7 +17,7 @@
     - name: Consolidar hostnames em um único arquivo
       lineinfile:
         line: "{{ hostname_output.stdout }}"
-        path: /tmp/hostname_report.txt
+        path: /tmp/hostname_report"{{ hostname_output.stdout }}".txt
 
 - name: Enviar relatório por e-mail
   hosts: localhost
