--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -18,6 +18,14 @@
       lineinfile:
         line: "{{ hostname_output.stdout }}"
         path: "/tmp/hostname_report_{{ hostname_output.stdout }}.txt"
+        
+    - name: Envie o arquivo para localhost
+      become: true
+      fetch:
+        src: "/tmp/hostname_report_{{ hostname_output.stdout }}.txt"
+        dest: "/tmp/hostname_report_exported_{{ hostname_output.stdout }}.txt"
+        flat: yes
+      delegate_to: localhost
 
 - name: Enviar relatório por e-mail
   hosts: localhost
