--- a/test-one-email.yaml
+++ b/test-one-email.yaml
@@ -1,7 +1,7 @@
 ---
 - name: gather data
   hosts: GNCASNHL07926, GNCASNHL07927
-  gather_facts: true
+  gather_facts: false
   tasks:
   - name: Get current status  
     shell: echo "123"
