--- a/test-one-email.yaml
+++ b/test-one-email.yaml
@@ -1,6 +1,14 @@
-- hosts: GNCASNHL07926, GNCASNHL07927
-  gather_facts: yes
+- name: Pegar hostname dos hosts GNCASNHL07926 e GNCASNHL07927
+  hosts: GNCASNHL07926,GNCASNHL07927
+  gather_facts: no
+
   tasks:
-    - name: Coletar hostname
-      set_fact:
-        all_hostnames: "{{ hostvars[host]['ansible_hostname'] }}" for host in groups['hosts'] | list }}"
+    - set_fact:
+        hostnames: "{{ hostnames|default([]) + [inventory_hostname] }}"
+- name: Exibir lista de hostnames
+  hosts: localhost
+  gather_facts: no
+
+  tasks:
+    - debug:
+        var: hostnames
