--- a/test-one-email.yaml
+++ b/test-one-email.yaml
@@ -1,9 +1,11 @@
 - name: Pegar hostname dos hosts GNCASNHL07926 e GNCASNHL07927
   hosts: GNCASNHL07926,GNCASNHL07927
   gather_facts: no
+  serial: 1
 
   tasks:
     - set_fact:
         hostnames: "{{ hostnames|default([]) + [inventory_hostname] }}"
+
     - debug:
         var: hostnames
