--- a/test-one-email.yaml
+++ b/test-one-email.yaml
@@ -4,6 +4,14 @@
     - shell: hostname
       register: date_res
       changed_when: false
-    - debug:
-        msg: "{{ ansible_play_hosts | map('extract', hostvars, 'date_res') | map(attribute='stdout') | list }}"
+    - name: Enviar e-mail com o relatório
+      mail:
+        host: smtp.gmail.com
+        port: 587
+        username: david.sf026@gmail.com
+        password: "{{ smtppwd }}"
+        from: david.sf026@gmail.com
+        to: david.sf026@gmail.com
+        subject: Relatório de hostname
+        body: "{{ ansible_play_hosts | map('extract', hostvars, 'date_res') | map(attribute='stdout') | list }}"
       run_once: yes
