--- a/test-one-email.yaml
+++ b/test-one-email.yaml
@@ -14,6 +14,7 @@
         to: david.sf026@gmail.com
         subject: Relatório de hostname
         body: |
+          hostnames
           {% for host in ansible_play_hosts %}
           {{ hostvars[host]['date_res'].stdout }}
           {% endfor %}
